--- a/BubbleSort/Bubble.html
+++ b/BubbleSort/Bubble.html
@@ -14,6 +14,8 @@
 
     <script src="Bubble.js" style="padding: 100px;"></script>
 
+    <p>red = the current key, orange = what is currently being compared to the key, blue = two bars that have been moved</p>
+    
     <ul class="Nav Center">
         <li><a href="../InsertionSort/Insertion.html">InsertionSort</a></li>
         <li><a href="../Home.html">Home</a></li>
