--- a/BubbleSort/Bubble.html
+++ b/BubbleSort/Bubble.html
@@ -25,8 +25,8 @@
     <div id="info">
 
       <br>
-
-      <p>red = the current key, orange = what is currently being compared to the key, blue = two bars that have been moved</p>
+      <br>
+      <p class = "Center" style="font-size: 40px;">red = the current key, orange = what is currently being compared to the key, blue = two bars that have been moved</p>
 
       <br>
       <header><u>How does bubble sort work?</u></header>
