--- a/SelectionSort/Selection.html
+++ b/SelectionSort/Selection.html
@@ -23,7 +23,11 @@
     <div class="Spacing"></div>
 
     <div id="info">
-        
+      
+      <br>
+      <br>
+      <p class = "Center" style="font-size: 30px;">Key: red = the current key, orange = what is currently being compared to the key, blue = two bars that have been moved</p>
+
       <br>
       <header><u>How does selection sort work?</u></header>
       <p>      
