--- a/InsertionSort/Insertion.html
+++ b/InsertionSort/Insertion.html
@@ -25,8 +25,7 @@
     <div id="info">
       
       <br>
-      <br>
-      <p class = "Center" style="font-size: 20px;">
+      <p class = "Center">
         Key: red = the current key, orange = what is currently being compared to 
         the key, white = the bar being compared to the key has been shifted forewards to that location, 
         blue = the final location of the key that was being used
