--- a/SelectionSort/Selection.html
+++ b/SelectionSort/Selection.html
@@ -25,8 +25,7 @@
     <div id="info">
       
       <br>
-      <br>
-      <p class = "Center" style="font-size: 20px;">Key: red = the current key, orange = what is currently being compared to the key, blue = two bars that have been moved</p>
+      <p class = "Center">Key: red = the current key, orange = what is currently being compared to the key, blue = two bars that have been moved</p>
 
       <br>
       <header><u>How does selection sort work?</u></header>
